feat: Add build function to populate navbar menu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <ul id="navbar-menu">
+        <ul id="navbar-menu" class="navbar-menu">
         </ul>
       </nav>
     </header>
@@ -21,7 +21,7 @@
         <h1>Landing Page</h1>
       </header>
 
-      <section id="section1">
+      <section id="section1" class="section1">
         <div class="container">
           <h2>Section 1</h2>
           <p>Lorem ipsum dolor sit amet, duo at lobortis adversarium. Pri ne elit alterum, iriure instructior ad vim, aperiri vulputate adolescens eum ne. Vis at senserit sapientem sadipscing, per vidit mollis appetere no. Ut nec inermis nominati sapientem, id nisl errem voluptatum eam, eu malis mucius sed.</p>
@@ -29,7 +29,7 @@
         </div>
       </section>
 
-      <section id="section2">
+      <section id="section2" class="section2">
         <div class="container">
           <h2>Section 2</h2>
           <p>Vitae aliquam has ne, mollis nostrud impedit et his, albucius luptatum eos id. Usu id sonet legimus mediocrem, essent repudiandae at sed, an pri meliore ponderum gubergren. Pri causae vituperatoribus ne, expetenda consequuntur eum in, ut mutat aperiri has. Per partem habemus dignissim te. Ut est graece oportere elaboraret, vis soleat nullam scripserit ne.</p>
@@ -37,7 +37,7 @@
         </div>
       </section>
 
-      <section id="section3">
+      <section id="section3" class="section3">
         <div class="container">
           <h2>Section 3</h2>
           <p>Ex euripidis constituam mea, invidunt facilisi in mel. Eos iudicabit suscipiantur ad. Te eius volutpat prodesset sea, sea habemus nostrum ea. Liber docendi cu mei.</p>
@@ -45,7 +45,7 @@
         </div>
       </section>
 
-      <section id="section4">
+      <section id="section4" class="section4">
         <div class="container">
           <h2>Section 4</h2>
           <p>Justo error munere eos ex, nam quod perpetua disputando ne, qui at sint dolore insolens. Eripuit intellegam delicatissimi at mei. Sit et evertitur persequeris, scaevola invenire an mei. Ius tantas populo te, ius nusquam constituto te. Mea summo aliquip conceptam ut.</p>
@@ -57,7 +57,7 @@
     <footer>
       <p>&copy2020 Adam Caplan</p>
     </footer>
-    
+
     <script src="js/app.js"></script>
   </body>
 </html>
