feat: Add scroll to top function

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
     <title>Landing Page</title>
@@ -52,6 +53,9 @@
           <p>Cum ex mucius vulputate posidonium, ei pro principes persequeris. Vim facete eruditi adipisci no. Eros vivendum liberavisse at eum, no tota vitae eloquentiam pro. Ludus omnes aperiri has in. Euripidis similique ut his, est vocibus interesset cu, putent commodo quaeque pro et. Veniam electram mea et, illum nullam saperet per et, magna verterem dignissim ei eam.</p>
         </div>
       </section>
+
+      <button id="scroll" class="scroll fa fa-chevron-up" onClick="scrollToTop()"></button>
+
     </main>
 
     <footer>
