--- a/index.html
+++ b/index.html
@@ -5,52 +5,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
     <title>Landing Page</title>
   </head>
   <body>
-    <header>
+    <header class="welcome">
       <nav class="navbar">
         <ul id="navbar-menu" class="navbar-menu">
         </ul>
       </nav>
+
+        <h1>Welcome!</h1>
+
     </header>
     <main>
-      <header>
-        <h1>Landing Page</h1>
-      </header>
-
       <section id="section1" class="section1">
         <div class="container">
-          <h2>Section 1</h2>
-          <p>Lorem ipsum dolor sit amet, duo at lobortis adversarium. Pri ne elit alterum, iriure instructior ad vim, aperiri vulputate adolescens eum ne. Vis at senserit sapientem sadipscing, per vidit mollis appetere no. Ut nec inermis nominati sapientem, id nisl errem voluptatum eam, eu malis mucius sed.</p>
-          <p>Mea ea ignota omnium veritus, vel te aliquip tractatos, quo ex regione vivendo invenire. An mutat facilis sed, his convenire periculis persecuti at, dicta viris indoctum ut duo. Natum nusquam eum in, eu graeco similique eos. Ex summo putant quo, ei zril exerci latine qui. Erant facilis civibus cu pri, utroque intellegat et mei, et tibique invidunt sapientem cum.</p>
+          <h2>About</h2>
+          <div class="about">
+            <div class="about-photo"></div>
+            <div>
+              <p>Lorem ipsum dolor sit amet, duo at lobortis adversarium. Pri ne elit alterum, iriure instructior ad vim, aperiri vulputate adolescens eum ne. Vis at senserit sapientem sadipscing, per vidit mollis appetere no. Ut nec inermis nominati sapientem, id nisl errem voluptatum eam, eu malis mucius sed.</p>
+              <p>Mea ea ignota omnium veritus, vel te aliquip tractatos, quo ex regione vivendo invenire. An mutat facilis sed, his convenire periculis persecuti at, dicta viris indoctum ut duo. Natum nusquam eum in, eu graeco similique eos. Ex summo putant quo, ei zril exerci latine qui. Erant facilis civibus cu pri, utroque intellegat et mei, et tibique invidunt sapientem cum.</p>
+            </div>
+          </div>
         </div>
       </section>
 
       <section id="section2" class="section2">
         <div class="container">
-          <h2>Section 2</h2>
-          <p>Vitae aliquam has ne, mollis nostrud impedit et his, albucius luptatum eos id. Usu id sonet legimus mediocrem, essent repudiandae at sed, an pri meliore ponderum gubergren. Pri causae vituperatoribus ne, expetenda consequuntur eum in, ut mutat aperiri has. Per partem habemus dignissim te. Ut est graece oportere elaboraret, vis soleat nullam scripserit ne.</p>
-          <p>Gloriatur scripserit sit et, habemus percipit lucilius at has. Cu denique theophrastus cum. In justo delicatissimi qui. Nec in consul inermis alienum, te eius facete sea. Minim decore signiferumque ad qui.</p>
-        </div>
+          <h2>Discover</h2>
+          <div class="services">
+            <div class="card explore-image">
+              <div class="card-text">Explore</div>
+            </div>
+            <div class="card learn-image">
+              <div class="card-text">Learn</div>
+            </div>
+            <div class="card grow-image">
+              <div class="card-text">Grow</div>
+            </div>
+          </div>
+          </div>
       </section>
 
       <section id="section3" class="section3">
         <div class="container">
-          <h2>Section 3</h2>
+          <h2>Reflect</h2>
           <p>Ex euripidis constituam mea, invidunt facilisi in mel. Eos iudicabit suscipiantur ad. Te eius volutpat prodesset sea, sea habemus nostrum ea. Liber docendi cu mei.</p>
           <p>Ponderum platonem ea vix. Nam perfecto omittantur at. Doctus offendit legendos at mel. An sit homero placerat appellantur, sint probatus dignissim ea sed. Ius ad duis civibus verterem, eu pro omnesque ocurreret. His ad enim posidonium, apeirian phaedrum te eos.</p>
+          <p>Gloriatur scripserit sit et, habemus percipit lucilius at has. Cu denique theophrastus cum. In justo delicatissimi qui. Nec in consul inermis alienum, te eius facete sea. Minim decore signiferumque ad qui.</p>
         </div>
       </section>
 
       <section id="section4" class="section4">
         <div class="container">
-          <h2>Section 4</h2>
-          <p>Justo error munere eos ex, nam quod perpetua disputando ne, qui at sint dolore insolens. Eripuit intellegam delicatissimi at mei. Sit et evertitur persequeris, scaevola invenire an mei. Ius tantas populo te, ius nusquam constituto te. Mea summo aliquip conceptam ut.</p>
-          <p>Cum ex mucius vulputate posidonium, ei pro principes persequeris. Vim facete eruditi adipisci no. Eros vivendum liberavisse at eum, no tota vitae eloquentiam pro. Ludus omnes aperiri has in. Euripidis similique ut his, est vocibus interesset cu, putent commodo quaeque pro et. Veniam electram mea et, illum nullam saperet per et, magna verterem dignissim ei eam.</p>
+          <h2>Connect</h2>
+          <h3 class="in-touch">Let's get in touch!</h3>
+          <div class="contact">
+            <a class="link">
+              <div class="fa fa-phone"></div>
+              <p>Phone</p>
+            </a>
+            <a class="link">
+              <div class="fa fa-envelope"></div>
+              <p>Email</p>
+            </a>
+            <a class="link">
+              <div class="fa fa-facebook"></div>
+              <p>Facebook</p>
+            </a>
+            <a class="link">
+              <div class="fa fa-instagram"></div>
+              <p>Instagram</p>
+            </a>
+          </div>
         </div>
       </section>
 
