feat: add responsive styling

--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Roboto&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/styles.css" />
 
     <title>Landing Page</title>
   </head>
   <body>
     <header class="welcome">
       <nav class="navbar">
-        <ul id="navbar-menu" class="navbar-menu">
-        </ul>
+        <ul id="navbar-menu" class="navbar-menu"></ul>
       </nav>
 
-        <h1>Welcome!</h1>
-
+      <h1>Welcome!</h1>
     </header>
     <main>
       <section id="section1" class="section1">
@@ -27,9 +25,15 @@
           <h2>About</h2>
           <div class="about">
             <div class="about-photo"></div>
-            <div>
-              <p>Lorem ipsum dolor sit amet, duo at lobortis adversarium. Pri ne elit alterum, iriure instructior ad vim, aperiri vulputate adolescens eum ne. Vis at senserit sapientem sadipscing, per vidit mollis appetere no. Ut nec inermis nominati sapientem, id nisl errem voluptatum eam, eu malis mucius sed.</p>
-              <p>Mea ea ignota omnium veritus, vel te aliquip tractatos, quo ex regione vivendo invenire. An mutat facilis sed, his convenire periculis persecuti at, dicta viris indoctum ut duo. Natum nusquam eum in, eu graeco similique eos. Ex summo putant quo, ei zril exerci latine qui. Erant facilis civibus cu pri, utroque intellegat et mei, et tibique invidunt sapientem cum.</p>
+            <div class="about-text">
+              <p>
+                Lorem ipsum dolor sit amet, duo at lobortis adversarium. Pri ne elit alterum, iriure instructior ad vim, aperiri vulputate adolescens eum ne. Vis at senserit sapientem sadipscing, per vidit mollis appetere no. Ut nec inermis
+                nominati sapientem, id nisl errem voluptatum eam, eu malis mucius sed.
+              </p>
+              <p>
+                Mea ea ignota omnium veritus, vel te aliquip tractatos, quo ex regione vivendo invenire. An mutat facilis sed, his convenire periculis persecuti at, dicta viris indoctum ut duo. Natum nusquam eum in, eu graeco similique eos.
+                Ex summo putant quo, ei zril exerci latine qui. Erant facilis civibus cu pri, utroque intellegat et mei, et tibique invidunt sapientem cum.
+              </p>
             </div>
           </div>
         </div>
@@ -49,14 +53,17 @@
               <div class="card-text">Grow</div>
             </div>
           </div>
-          </div>
+        </div>
       </section>
 
       <section id="section3" class="section3">
         <div class="container">
           <h2>Reflect</h2>
           <p>Ex euripidis constituam mea, invidunt facilisi in mel. Eos iudicabit suscipiantur ad. Te eius volutpat prodesset sea, sea habemus nostrum ea. Liber docendi cu mei.</p>
-          <p>Ponderum platonem ea vix. Nam perfecto omittantur at. Doctus offendit legendos at mel. An sit homero placerat appellantur, sint probatus dignissim ea sed. Ius ad duis civibus verterem, eu pro omnesque ocurreret. His ad enim posidonium, apeirian phaedrum te eos.</p>
+          <p>
+            Ponderum platonem ea vix. Nam perfecto omittantur at. Doctus offendit legendos at mel. An sit homero placerat appellantur, sint probatus dignissim ea sed. Ius ad duis civibus verterem, eu pro omnesque ocurreret. His ad enim
+            posidonium, apeirian phaedrum te eos.
+          </p>
           <p>Gloriatur scripserit sit et, habemus percipit lucilius at has. Cu denique theophrastus cum. In justo delicatissimi qui. Nec in consul inermis alienum, te eius facete sea. Minim decore signiferumque ad qui.</p>
         </div>
       </section>
@@ -87,7 +94,6 @@
       </section>
 
       <button id="scroll" class="scroll fa fa-chevron-up" onClick="scrollToTop()"></button>
-
     </main>
 
     <footer>
