--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </section>
 
-      <button id="scroll" class="scroll fa fa-chevron-up" onClick="scrollToTop()"></button>
+      <button id="scroll" class="scroll fa fa-chevron-up"></button>
     </main>
 
     <footer>
